Fixing collapse errors in mobile

--- a/frontend/src/components/collapse/collapse.css
+++ b/frontend/src/components/collapse/collapse.css
@@ -144,8 +144,15 @@
 
 @media screen and (max-width: 480px) {
 
-    .collapse-nav {
-        max-width: 60%;
+    .collapse-nav-title {
+        font-size: 12px;
     }
 
+    .collapse-nav {
+        max-width: 50%;
+    }
+
+    .collapse-nav-link {
+        font-size: 12px;
+    }
 }
